<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.krzdabrowski.airpurrr.login.LoginViewModel" />

        <variable
            name="isLoggingIn"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{isLoggingIn ? View.VISIBLE : View.INVISIBLE}" />

        <LinearLayout
            style="@style/Login.ManualLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_logo"
                style="@style/Login.Credentials.Logo"
                android:layout_width="@dimen/login_logo_size"
                android:layout_height="@dimen/login_logo_size"
                android:contentDescription="@string/login_description_logo"
                android:src="@drawable/ic_logo" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Login.Credentials.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_email"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}"
                    app:errorValidation="@{vm.isEmailError}"
                    app:errorType="@{vm.emailErrorType}" />
                <requestFocus/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Login.Credentials.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    app:errorValidation="@{vm.isPasswordError}"
                    app:errorType="@{vm.passwordErrorType}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/Login.Credentials.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.onLoginButtonClick()}"
                android:text="@string/login_btn_text" />
        </LinearLayout>
    </LinearLayout>
</layout>