...
    <string name="login_fingerprint_button_cancel">Cancel</string>
    <string name="login_description_logo">Application logo</string>
    <string name="login_pref_is_logged_in_before">isLoggedInBefore</string>

    <string name="login_msg_dialog">Authenticating…</string>
    <string name="login_error_empty_field">Required</string>
    <string name="login_error_auth">Authentication error!</string>
    <string name="login_error_no_saved_fingerprint">Add at least one fingerprint to login with fingerprint</string>
    <string name="login_error_no_permission">Grant permissions to login with fingerprint</string>

    <string name="login_key_sharedprefs" translatable="false">sharedPrefs</string>


...
    <string name="main_tab_current">Current</string>
    <string name="main_tab_forecast">Forecast</string>

    <string name="main_data_percentage">%.1f%%</string>
    <string name="main_data_ugm3">(%.1f)</string>
    <string name="main_data_info_pm25">PM2.5</string>
    <string name="main_data_info_pm10">PM10</string>
    <string name="main_data_info_indoors">Indoors</string>
    <string name="main_data_info_api">API</string>
    <string name="main_data_info_api_empty">no data</string>
    <string name="main_data_description_logo">Airly logo</string>

    <string name="main_msg_turn_on">Processing the request…</string>
...
