...
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <include
                            android:id="@+id/partial_current_pm25"
                            style="@style/Main.Data.OuterLayout"
                            layout="@layout/partial_current_data"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:baseVm="@{baseVm}"
                            app:data="@{baseVm.flagDetectorApi ? apiData : detectorData}"
                            app:type="@{@string/main_data_info_pm25}" />

                        <include
                            android:id="@+id/partial_current_pm10"
                            style="@style/Main.Data.OuterLayout"
                            layout="@layout/partial_current_data"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:baseVm="@{baseVm}"
...
